# project-m36

./: .appveyor.yml  .gitignore  .travis.yml  Changelog.markdown  README  README.markdown  Relation.hs  RelationAtom.hs  RelationAttribute.hs  RelationExpr.hs  RelationHTML.hs  RelationStaticOptimizer.hs  RelationStaticOptimizerTest.hs  RelationTerm.hs  RelationTest.hs  RelationTuple.hs  RelationTupleSet.hs  RelationType.hs  RelationalError.hs  RelationalInclusionDependency.hs  RelationalTransaction.hs  RelationalTransactionShow.hs  TutorialDInterpreter.hs  TutorialDInterpreterTest.hs  about.html  archive.html  cabal.project  contact.html  default.nix  docker.nix  h2svg.sh  hie.yaml  hp2svg.sh  index.html  install_tools.sh  pkgs.nix  project-m36.cabal  release.nix  runghcid.sh  shell.nix  (+15 more)
.appveyor/: preload_certs.ps
.github/workflows/: cabal-test.yaml  ci.yaml  haskell-ci.yml
.travis/: install-dependencies.sh  install-ghc.sh  install-stack.sh
Database/Persist/: ProjectM36.hs
DevOps/common/: common.sh
DevOps/local/test/: cb-cd-ct.sh  cb-cd.sh  cb.sh  cd-ct.sh  cd.sh  ct.sh  finishing.sh  prepare.sh  uncb-uncd-unct.sh  uncb-uncd.sh  uncb.sh  uncd-unct.sh  uncd.sh  unct.sh  unfinishing.sh  unprepare.sh
ProjectM36/: Atom.hs  AtomConstructor.hs  AtomFunction.hs  AtomFunctionBody.hs  AtomType.hs  Attribute.hs  AttributeNames.hs  Base.hs  Client.hs  ConcreteTypeRep.hs  Daemon.hs  DataConstructor.hs  DatabaseContext.hs  DateExamples.hs  DirectoryFsync.c  Error.hs  HashSetBinary.hs  Key.hs  Notifications.hs  Persist.hs  Relation.hs  RelationalExpression.hs  Server.hs  Session.hs  Sessions.hs  StaticOptimizer.hs  Transaction.hs  TransactionGraph.hs  Tuple.hs  TupleSet.hs  TypeConstructor.hs  TypeConstructorDef.hs  Win32Handle.hs  bigrel.hs
ProjectM36/AtomFunctions/: Basic.hs  Primitive.hs
ProjectM36/Client/: Json.hs
ProjectM36/Daemon/: Config.hs  EndPoints.hs  EntryPoints.hs  Main.hs  ParseArgs.hs  RemoteCallTypes.hs  project-m36-daemon.hs
ProjectM36/DataTypes/: Basic.hs  Day.hs  Either.hs  Interval.hs  Maybe.hs  Primitive.hs
ProjectM36/Relation/Parse/: CSV.hs
ProjectM36/Relation/Show/: CSV.hs  Gnuplot.hs  HTML.hs  Term.hs
ProjectM36/Server/: EntryPoints.hs  ParseArgs.hs  RemoteCallTypes.hs  WebSocket.hs  project-m36-server.hs  project-m36.js  websocket-client.html  websocket-client.js  websocket-test.html
ProjectM36/Server/RemoteCallTypes/: Json.hs
ProjectM36/Server/WebSocket/: Main.hs  project-m36.js  websocket-client.html  websocket-client.js
ProjectM36/Transaction/: Persist.hs  Show.hs
ProjectM36/TransactionGraph/: Merge.hs  Persist.hs  Show.hs
ProjectM36/TransactionGraph/Show/: Dot.hs
TutDForSQLDevelopers/: 1.html  1.slidedata  10.html  10.slidedata  11.html  11.slidedata  12.html  12.slidedata  13.html  13.slidedata  14.html  14.slidedata  15.html  15.slidedata  16.html  16.slidedata  17.html  17.slidedata  18.html  18.slidedata  19.html  19.slidedata  2.html  2.slidedata  20.html  20.slidedata  21.html  21.slidedata  22.html  22.slidedata  23.html  23.slidedata  24.html  24.slidedata  25.html  25.slidedata  26.html  26.slidedata  27.html  27.slidedata  (+84 more)
TutorialD/: Interpreter.hs  tutd.hs
TutorialD/Interpreter/: Base.hs  DatabaseContextExpr.hs  DatabaseExpr.hs  InformationOperator.hs  RODatabaseContextOperator.hs  RelationalExpr.hs  TransactionGraphOperator.hs  Types.hs
TutorialD/Interpreter/DataTypes/: Interval.hs
benchmark/: Relation.hs  bigrel.hs
cbits/: DirectoryFsync.c  darwin_statfs.c
css/: brooklyn.css  default.css
docs/: 15_minute_tutorial.markdown  Handling_DDL_Changes.markdown  acid_assessment.markdown  atomfunctions.markdown  authentication.markdown  basic_benchmarks.html  commits_in_constant_time.markdown  committed_database_state.dot  data_independence.markdown  database_context_functions.markdown  dataframes.markdown  dev_setup.markdown  filesystem-persistence.markdown  hotspot_optimizer.markdown  import_export_csv.markdown  import_haskell_module.markdown  index.markdown  initial_database_state.dot  inline_tutoriald.markdown  introduction_to_projectm36.markdown  introduction_to_the_relational_algebra.markdown  isomorphic_schemas.markdown  javascript_driver.markdown  jupyter_kernel.markdown  merge_notes.markdown  merge_transactions.markdown  merkle_transaction_graph.markdown  new_datatypes.markdown  on_null.markdown  persistent_library_driver.markdown  projectm36_client_library.markdown  reaching_out_of_the_tarpit.markdown  replication.markdown  role-based_access_control.markdown  sample_session.asciinema.json  server_mode.markdown  simple_api.markdown  sqlegacy.markdown  transaction_graph_operators.markdown  transgraphrelationalexpr.markdown  (+7 more)
examples/: CustomTupleable.hs  DerivingCustomTupleable.hs  DynamicAtomFunctions.hs  DynamicDatabaseContextFunctions.hs  Hospital.hs  NonEmptyAtomalbe.hs  PersistClient.hs  Plantfarm.hs  SimpleClient.hs  blog.hs  hair.hs  out_of_the_tarpit.hs  out_of_the_tarpit.tutd  tutd-inline.hs  zoo.hs
examples/Plantfarm/: Plantfarm.hs  plant_pretty_print
jupyter/: ITutorialDKernel.py  TutorialD Notebook Walkthrough.ipynb  kernel.json  setup.py
jupyter/itutd/: ITutorialDKernel.py  __main__.py
nix/: sources.json
posts/: 2015-12-07-tu-quoque.html  2016-12-14-isomorphic-schema.html  2017-10-08-haskell-adts-dbms.html  2017-11-30-static-optimizations.html  2024-07-16-are-you-qualified-to-use-null.html
scripts/: DateExamples.tutd  cjdate.sql  emp.tutd  multiline.tutd
src/python/: test.py
test/: AccessControl.hs  AccessControlList.hs  BTree.hs  Cache.hs  DataFrame.hs  GMapAssoc.hs  IsomorphicSchema.hs  LoginRoles.hs  MultiProcessDatabaseAccess.hs  PrettyPrinter.hs  scripts.hs
test/Client/: Simple.hs
test/Daemon/: Main.hs
test/Relation/: Atomable.hs  Basic.hs  ConstructedAtom.hs  StaticOptimizer.hs  Tupleable.hs  TypeResolution.hs
test/SQL/: InterpreterTest.hs
test/Server/: Main.hs  WebSocket.hs
test/TransactionGraph/: Automerge.hs  Merge.hs  Persist.hs
test/TutorialD/: Interpreter.hs  InterpreterTest.hs  Printer.hs  PrinterTest.hs
test/persistent-driver/: test.hs
(+235 files in other folders)
